--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -4,7 +4,7 @@
 
 {% block content %}
   <h1>Создать аккаунт</h1>
-  <p>Пожалуйста, зарегистрируйтесь, используя следующую форму:</p>
+  <p>Пожалуйста, зарегистрируйтесь, используя следующую форму. Группа и год поступления только для студентов.</p>
   <form method="post">
     {{ profile_form.as_p }}
     {% csrf_token %}
