--- a/user/templates/static/css/base.css
+++ b/user/templates/static/css/base.css
@@ -172,26 +172,6 @@ ul.messages li a.close {
     float:left;
 }
 
-/* social-auth */
-.social {
-    float:right;
-}
-.social li {
-    list-style:none;
-    padding:10px 20px;
-    margin:0 0 10px 0;
-}
-.social li a {
-    width:100%;
-    height:100%;
-    display:block;
-    color:#fff;
-}
-.social li.facebook { background:#3b5399; }
-.social li.twitter { background:#00cffa; }
-.social li.google { background:#de1710; }
-
-
 /* images */
 
 .image-preview, .image-detail {
@@ -276,6 +256,28 @@ img.user-detail {
     color:#ccc;
 }
 
-.teacher-name-input {
-            width: 300px; /* Измените значение на нужную вам ширину */
-        }
+
+
+@media only screen and (max-width: 600px) {
+    /* CSS для маленьких экранов, например, для мобильных устройств */
+    #header {
+        padding: 10px;
+    }
+
+    #header .logo {
+        float: none;
+        margin-right: 0;
+        text-align: center; /* Центрирование логотипа на мобильных устройствах */
+    }
+
+    #header ul.menu {
+        float: none;
+        margin-top: 10px;
+        text-align: center; /* Центрирование меню на мобильных устройствах */
+    }
+
+    #header .user {
+        float: none;
+        text-align: center; /* Центрирование кнопки входа на мобильных устройствах */
+    }
+}
